# bob.bio.base

./: .gitignore  .gitlab-ci.yml  .travis.yml  MANIFEST.in  README.md  README.rst  buildout.cfg  develop.cfg  log.txt  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  version.txt
bob/bio/base/: __init__.py  grid.py  wrappers.py
bob/bio/base/algorithm/: Algorithm.py  BIC.py  Distance.py  LDA.py  PCA.py  PLDA.py  __init__.py  distance.py  gmm.py  isv.py  jfa.py
bob/bio/base/annotator/: Annotator.py  Base.py  Callable.py  FailSafe.py  SaveAnnotationsWrapper.py  __init__.py  dummy.py
bob/bio/base/baseline/: Baseline.py  __init__.py
bob/bio/base/config/algorithm/: bic.py  distance_cosine.py  distance_euclidean.py  distance_hamming.py  lda.py  pca.py  pca_lda.py  pca_plda.py  plda.py
bob/bio/base/config/baselines/: lda_atnt_legacy.py  pca_atnt.py  pca_atnt_legacy.py
bob/bio/base/config/examples/: gabor_mobio-male.py  isv_atnt_legacy_all_legacy.py  lda_atnt_legacy.py  lda_atnt_legacy_all_legacy.py  pca_atnt.py  pca_atnt_legacy.py  pca_mobio-male.py
bob/bio/base/config/extractor/: linearize.py
bob/bio/base/config/grid/: demanding.py  gpu.py  grid.py  local.py
bob/bio/base/config/preprocessor/: filename.py
bob/bio/base/database/: Database.py  DatabaseBob.py  DatabaseFileList.py  __init__.py  atnt.py  csv_database.py  csv_dataset.py  database.py  file.py  filelist.py  legacy.py  utils.py
bob/bio/base/database/filelist/: __init__.py  driver.py  models.py  query.py
bob/bio/base/extractor/: Extractor.py  Linearize.py  __init__.py  stacks.py
bob/bio/base/mixins/: __init__.py  legacy.py  linearize.py  pca.py
bob/bio/base/pipelines/: __init__.py  abstract_classes.py  annotated_blocks.py  biometric_algorithms.py  blocks.py  entry_points.py  legacy.py  pipelines.py  score_post_processor.py  score_writers.py  vanilla_biometrics.py  wrappers.py
bob/bio/base/pipelines/vanilla_biometrics/: __init__.py  abstract_classes.py  annotated_legacy.py  biometric_algorithm.py  biometric_algorithms.py  blocks.py  comparator.py  implemented.py  legacy.py  mixins.py  pipeline.py  pipelines.py  score_post_processor.py  score_writers.py  vanilla_biometrics.py  wrappers.py  zt_norm.py
bob/bio/base/preprocessor/: Filename.py  Preprocessor.py  __init__.py  stacks.py
bob/bio/base/processor/: __init__.py  linearize.py  pca.py
bob/bio/base/score/: __init__.py  load.py  openbr.py
bob/bio/base/script/: __init__.py  annotate.py  baseline.py  bio.py  collect_results.py  commands.py  compare_samples.py  enroll.py  error_utils.py  evaluate.py  extract.py  figure.py  fuse_scores.py  fusion_llr.py  gen.py  grid_search.py  pipeline.py  pipeline_score_norm.py  pipeline_simple.py  pipeline_train.py  pipeline_transform.py  pipelines.py  preprocess.py  resources.py  score.py  sort.py  transform.py  vanilla_biometrics.py  vanilla_biometrics_score_normalization.py  vanilla_biometrics_ztnorm.py  verify.py  vuln_commands.py  vuln_figure.py  vulnerability.py
bob/bio/base/test/: __init__.py  test_algorithms.py  test_annotators.py  test_baselines.py  test_commands.py  test_config_file.py  test_database_implementations.py  test_databases.py  test_extractor.py  test_filelist.py  test_gen.py  test_io.py  test_mixins.py  test_pipeline_post_process_score.py  test_pipeline_simple.py  test_pipeline_train.py  test_preprocessor.py  test_processor.py  test_scripts.py  test_stacks.py  test_tools.py  test_transformers.py  test_utils.py  test_vanilla_biometrics.py  test_vanilla_biometrics_post_process_score.py  test_vanilla_biometrics_score_norm.py  utils.py
bob/bio/base/test/data/: bic_enroller.hdf5  dummy_samples_2.hdf5  pca_projector.hdf5  plda_enroller.hdf5  (+9 more)
bob/bio/base/tools/: FileSelector.py  __init__.py  algorithm.py  command_line.py  extractor.py  grid.py  preprocessor.py  scoring.py
bob/bio/base/transformers/: __init__.py  algorithm.py  extractor.py  linearize.py  pca.py  preprocessing.py  preprocessor.py
bob/bio/base/utils/: __init__.py  annotations.py  io.py  processors.py  resources.py  singleton.py
conda/: meta.yaml
doc/: annotations.rst  annotators.rst  baseline.rst  biometrics_intro.rst  catalog.json  conf.py  database_interface.rst  experiments.rst  extra-intersphinx.txt  filelist-guide.rst  implementation.rst  implemented.rst  index.rst  installation.rst  legacy.rst  links.rst  more.rst  nitpick-exceptions.txt  openbr.rst  pipeline_score_norm.rst  pipeline_simple_features.rst  pipeline_simple_intro.rst  py_api.rst  struct_bio_rec_sys.rst  vanilla_biometrics_features.rst  vanilla_biometrics_intro.rst  vanilla_biometrics_score_normalization.rst  vulnerability_analysis.rst
doc/code_samples/: database_example.py  pipeline_example.py
doc/img/: .~lock.algorithm.odg#  algorithm.odg  bio_ident_sys.odg  bio_rec_sys.odg  bio_ver_sys.odg  biometrics_sub_pipelines.odg  evaluation.odg  extractor.odg  gen_synth_eval_plots.sh  preprocessor.odg  vanilla_biometrics_pipeline.odg  verification-error_types.odg
src/bob/bio/base/: __init__.py  wrappers.py
test/: test_algorithms.py  test_commands.py  test_io.py
test/data/: bic_model.hdf5  lda_model.hdf5  pca_model.hdf5  scores-nonorm-calibrated-dev  scores.mask  scores.mtx
test/data/example_filelist/dev/: for_probes.lst
test/dummy/: config2.py  samples_list.py
tests/: test_algorithms.py  test_annotators.py  test_commands.py  test_database_implementations.py  test_filelist.py  test_gen.py  test_io.py  test_pipeline_post_process_score.py  test_pipeline_simple.py  test_pipeline_train.py  test_transformers.py  test_utils.py  utils.py
tests/data/: dummy_samples_1.hdf5  iec_enroller.hdf5  lda_projected.hdf5  lda_projector.hdf5  pca_projected.hdf5  plda_enroller.hdf5  plda_nopca_model.hdf5  scores-cmc-4col-open-set-one-error.txt  scores-cmc-4col-open-set-two-errors.txt  scores-cmc-4col-open-set.txt  scores-nonorm-fileset-dev  search.mask  search.mtx
tests/data/example_filelist/norm/: train_optional_world_1.lst
tests/data/vuln/: scores-dev.csv  scores-eval-med.csv
tests/dummy/: config.py  database.py  samples_list.py
(+139 files in other folders)
